@@ -260,12 +260,17 @@
 #define DCIDESC_AGENT_LOG_STATUS                  _T("Agent log status")
 #define DCIDESC_AGENT_PROCESSEDREQUESTS           _T("Number of requests processed by agent")
 #define DCIDESC_AGENT_REGISTRAR                   _T("Registrar server address set on agent startup")
-#define DCIDESC_AGENT_RECEIVEDSYSLOGMESSAGES      _T("Number of syslog messages received by agent")
 #define DCIDESC_AGENT_REJECTEDCONNECTIONS         _T("Number of connections rejected by agent")
 #define DCIDESC_AGENT_SENT_TRAPS                  _T("Number of traps successfully sent to server")
+#define DCIDESC_AGENT_SNMP_ISPROXYENABLED         _T("Check if SNMP proxy is enabled")
+#define DCIDESC_AGENT_SNMP_REQUESTS               _T("Number of SNMP requests sent")
+#define DCIDESC_AGENT_SNMP_RESPONSES              _T("Number of SNMP responses received")
+#define DCIDESC_AGENT_SNMP_SERVERREQUESTS         _T("Number of SNMP proxy requests received from server")
 #define DCIDESC_AGENT_SOURCEPACKAGESUPPORT        _T("Check if source packages are supported")
 #define DCIDESC_AGENT_SUPPORTEDCIPHERS            _T("List of ciphers supported by agent")
-#define DCIDESC_AGENT_SYSLOGPROXYQUEUESIZE        _T("Agent syslog proxy queue size")
+#define DCIDESC_AGENT_SYSLOGPROXY_ISENABLED       _T("Check if syslog proxy is enabled")
+#define DCIDESC_AGENT_SYSLOGPROXY_RECEIVEDMSGS    _T("Number of syslog messages received by agent")
+#define DCIDESC_AGENT_SYSLOGPROXY_QUEUESIZE       _T("Agent syslog proxy queue size")
 #define DCIDESC_AGENT_THREADPOOL_ACTIVEREQUESTS   _T("Agent thread pool {instance}: active requests")
 #define DCIDESC_AGENT_THREADPOOL_CURRSIZE         _T("Agent thread pool {instance}: current size")
 #define DCIDESC_AGENT_THREADPOOL_LOAD             _T("Agent thread pool {instance}: current load")
